2019-03-17  Araki Ken  <arakiken@users.sf.net>

	* vt_pty_ssh.c: If libssh2_userauth_list() returns NULL but no error
	  happens, authentication is skipped.

	* README.ja: Updated.

	* im_iiimf_aux.c: Compiling error is fixed.

	* bl_util.[ch]: bl_base64_encode() is removed.

2019-03-17  Araki Ken  <arakiken@users.sf.net>

	* beos.cpp: Conflicting Control+a with B_HOME etc is fixed.

	* ui.h: 0xe0000 mask is set for XK_Home etc.

	* vt_util.[ch]: Removed.

	* bl_util.c:
	  - Added.
	  - bl_hex_decode(), bl_hex_encode() and bl_base64_decode() are moved
	    from vt_util.[ch].
	  - bl_hls_to_rgb() is moved from c_sixel.c.
	  ^ bl_rgb_to_hls() is moved from vt_parser.c (rgb_to_hls()).
	  - bl_get_user_name() is added.

	* bl_config.h.in: '#undef HAVE_GETPWUID' is added.

	* src/Makefile.in: bl_util.o is added to COMOBJ.

	* baselib/configure.in: The existence of getpwuid is checked.

2019-03-16  Araki Ken  <arakiken@users.sf.net>

	* bl_locale.c, mef.c, im_skk.c, im_wnn.c, mc_font.c, mc_radio.c,
	  ui_font_ft.c, ui_screen.c, ui_shortcut.c, win32/ui_font.c,
	  xlib/ui_font.c, vt_iscii.c, vt_shape_bidi.c, vt_char_encoding.c,
	  vt_termcap.c: Some array declarations are formatted.

2019-03-16  Araki Ken  <arakiken@users.sf.net>

	* ui_event_source-cocoa.m: If vt_check_sig_child() returns true,
	  ui_event_source_process() exits on cocoatouch.

	* vt_term_manager.[ch]:
	  vt_check_sig_child() is compiled if __APPLE__ is defined.

	* ef_euccn_parser.c: ef_get_ucs_property() is removed.

	* ef_jis_property.[ch]: 'size' is removed from arguments of
	  ef_get_jisx0208_1983_property() and ef_get_jisx0213_2000_1_property().

	* ef_jisx0208_1983_property.[ch], ef_jisx0213_2000_property.[ch]
	  => ef_jis_property.[ch]

	* ef_ucs4_jisx0213.c: ef_map_ucs4_to_jisx0213_2000_1() calls
	  ef_get_jisx0213_2000_1_property().

	* ef_ucs4_jisx0208.c: ef_map_ucs4_to_jisx0208_1983() calls
	  ef_get_jisx0208_1983_property().
