@@ -1,3 +1,9 @@
+2019-03-18  Araki Ken  <arakiken@users.sf.net>
+
+	* java/Makefile.in: Updated to Java 10 or later.
+
+	* mlterm.c: Compiling error is fixed.
+
 2019-03-17  Araki Ken  <arakiken@users.sf.net>
 
 	* vt_pty_ssh.c: If libssh2_userauth_list() returns NULL but no error
